--- a/css/sobremim.css
+++ b/css/sobremim.css
@@ -10,6 +10,8 @@
 .sobremim .subtitulo {
   font-size: 4.5rem;
   line-height: 1.125;
+  word-break: normal;
+  max-width: 6ch;
 }
 
 .sobremim-texto {
